[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-loadbalancer"
version = "0.1.0"
description = "A NetBox plugin for managing load balancers, virtual servers, pools, and pool members"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "David Johnnes", email = "david.johnnes@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Networking",
]
keywords = ["netbox", "plugin", "load-balancer", "networking"]

[project.urls]
Homepage = "https://github.com/davidjohnnes/netbox-loadbalancer"
Repository = "https://github.com/davidjohnnes/netbox-loadbalancer"
Issues = "https://github.com/davidjohnnes/netbox-loadbalancer/issues"
Changelog = "https://github.com/davidjohnnes/netbox-loadbalancer/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["netbox_loadbalancer*"]
